# crypto_fraud-detection

./: .env  .gitignore  README.md  data _extract.py  info_extract.py  main.py  pyproject.toml  requirements.txt  run.py  sklearn_detect.py  verecel.json
.github/workflows/: daily-job.yml
app/: __init__.py  dashboard.html  dashboard.js  main.py
app/api/: __init__.py  index.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: alerts.py  evidence.py  evidence_service.py  fraud.py  keystroke.py  mouse.py  payment.py  stats.py
app/core/: __init__.py  config.py  database.py
app/services/: __init__.py  fraud_service.py
app/templates/: checkout.html
app/utils/: __init__.py  logger.py
