[project]
name = "fraud-detection-api"
version = "1.0.0"
description = "Real-time Fraud Detection FastAPI"
requires-python = ">=3.10"

[project.scripts]
run-api = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100